--- a/css/style.css
+++ b/css/style.css
@@ -1108,7 +1108,7 @@ input[type="checkbox"] {
     margin-bottom: 0;
 }
 .services .item img {
-    width: 60px;
+    /* width: 60px; */
     margin-bottom: 20px;
 }
 .services .item .numb {
